// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should correspond default layout 1`] = `
<div>
  <header
    class="_header_ede614"
  >
    <div
      class="_headerContent_ede614"
    >
      <a
        class="_logo_18636e"
        data-discover="true"
        href="/"
      >
        MOVIERAMA
      </a>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--pin"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 12 12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 0a4.221 4.221 0 0 0-3.59 6.438l3.352 5.394a.344.344 0 0 0 .297.168h.003a.348.348 0 0 0 .297-.172l3.266-5.45A4.221 4.221 0 0 0 6 0zm3.02 6.02l-2.965 4.953-3.047-4.907A3.5 3.5 0 0 1 2.48 4.22 3.528 3.528 0 0 1 6 .699a3.528 3.528 0 0 1 3.52 3.52c0 .636-.176 1.258-.5 1.8zm0 0"
            />
            <path
              d="M6 2.11a2.11 2.11 0 1 0 .002 4.22A2.11 2.11 0 0 0 6 2.11zm0 3.519a1.41 1.41 0 1 1-.001-2.82A1.41 1.41 0 0 1 6 5.63zm0 0"
            />
          </svg>
        </div>
         
        Current Location
      </button>
      <nav
        class="_siteNavigation_36ef23"
      >
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/finder"
        >
          Theaters
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/discounts"
        >
          Sale
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/kids"
        >
          Kids
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/art"
        >
          Art
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/multicard"
        >
          Multi-card
        </a>
      </nav>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--account"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
            />
            <path
              d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
            />
          </svg>
        </div>
         
         
      </button>
    </div>
  </header>
</div>
`;

exports[`Header > should support the "className" prop 1`] = `
<div>
  <header
    class="_header_ede614 custom-class"
  >
    <div
      class="_headerContent_ede614"
    >
      <a
        class="_logo_18636e"
        data-discover="true"
        href="/"
      >
        MOVIERAMA
      </a>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--pin"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 12 12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 0a4.221 4.221 0 0 0-3.59 6.438l3.352 5.394a.344.344 0 0 0 .297.168h.003a.348.348 0 0 0 .297-.172l3.266-5.45A4.221 4.221 0 0 0 6 0zm3.02 6.02l-2.965 4.953-3.047-4.907A3.5 3.5 0 0 1 2.48 4.22 3.528 3.528 0 0 1 6 .699a3.528 3.528 0 0 1 3.52 3.52c0 .636-.176 1.258-.5 1.8zm0 0"
            />
            <path
              d="M6 2.11a2.11 2.11 0 1 0 .002 4.22A2.11 2.11 0 0 0 6 2.11zm0 3.519a1.41 1.41 0 1 1-.001-2.82A1.41 1.41 0 0 1 6 5.63zm0 0"
            />
          </svg>
        </div>
         
        Current Location
      </button>
      <nav
        class="_siteNavigation_36ef23"
      >
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/finder"
        >
          Theaters
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/discounts"
        >
          Sale
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/kids"
        >
          Kids
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/art"
        >
          Art
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/multicard"
        >
          Multi-card
        </a>
      </nav>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--account"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
            />
            <path
              d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
            />
          </svg>
        </div>
         
         
      </button>
    </div>
  </header>
</div>
`;

exports[`Header > should support the "className" prop 2`] = `
<div>
  <header
    class="_header_ede614 custom-class-v2"
  >
    <div
      class="_headerContent_ede614"
    >
      <a
        class="_logo_18636e"
        data-discover="true"
        href="/"
      >
        MOVIERAMA
      </a>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--pin"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 12 12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 0a4.221 4.221 0 0 0-3.59 6.438l3.352 5.394a.344.344 0 0 0 .297.168h.003a.348.348 0 0 0 .297-.172l3.266-5.45A4.221 4.221 0 0 0 6 0zm3.02 6.02l-2.965 4.953-3.047-4.907A3.5 3.5 0 0 1 2.48 4.22 3.528 3.528 0 0 1 6 .699a3.528 3.528 0 0 1 3.52 3.52c0 .636-.176 1.258-.5 1.8zm0 0"
            />
            <path
              d="M6 2.11a2.11 2.11 0 1 0 .002 4.22A2.11 2.11 0 0 0 6 2.11zm0 3.519a1.41 1.41 0 1 1-.001-2.82A1.41 1.41 0 0 1 6 5.63zm0 0"
            />
          </svg>
        </div>
         
        Current Location
      </button>
      <nav
        class="_siteNavigation_36ef23"
      >
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/finder"
        >
          Theaters
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/discounts"
        >
          Sale
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/kids"
        >
          Kids
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/art"
        >
          Art
        </a>
        <a
          class="_siteNavLink_e89f10"
          data-discover="true"
          data-test-id="site-nav-link"
          href="/multicard"
        >
          Multi-card
        </a>
      </nav>
      <button
        class="_iconButton_cab355"
      >
        <div
          class="_customIcon_4b9e8f _customIcon_4b9e8f--account"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
            />
            <path
              d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
            />
          </svg>
        </div>
         
         
      </button>
    </div>
  </header>
</div>
`;
